--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -6,13 +6,13 @@
       = Siteconf.footer.html_safe
     %small.muted
       Powered by
-      = link_to 'Rabel', 'http://rabelapp.com', :target => '_blank', :class => :muted
+      = link_to 'Redmonster', 'http://rabelapp.com', :target => '_blank', :class => :muted
       = Redmonster.version
 
 = render 'shared/google_analytics'
 
 :javascript
-  window.rabel.search_engine_url = "#{search_engine_url}";
+  window.redmonster.search_engine_url = "#{search_engine_url}";
   jQuery(function($) {
     $('a[rel*=facebox]').facebox();
 
